# netgen

./: Cargo.toml  README.md  config.yaml  http.yaml
.github/workflows/: ci.yml
src/: http_axum.rs  lib.rs  main.rs  read_mode.rs  tcp_echo.rs  tcp_worker.rs  util.rs
templates/: ci.yml.hbs
templates/http_axum/: Cargo.toml.hbs  Dockerfile.hbs  docker-compose.yml.hbs  handlers.rs.hbs  main.rs.hbs
templates/tcp_echo/: Cargo.toml.hbs  main.rs.hbs
templates/tcp_worker/: main.rs.hbs
tests/: integration_test.rs
