[package]
name = "netgen"
version = "0.1.0"
edition = "2021"

[lib]
name = "netgen"
path = "src/lib.rs"

[[bin]]
name = "netgen"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
handlebars = "5"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
